Workaround for istio issues

--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -28,3 +28,12 @@ components:
       - kong:2.8.1
       - busybox:1.28
       - supabase/postgres-meta:latest
+    actions:
+      onDeploy:
+        before:
+          - cmd: kubectl label namespace leapfrogai istio-injection=disabled --overwrite
+        after:
+          - cmd: kubectl label namespace leapfrogai istio-injection=enabled --overwrite
+          - cmd: kubectl get deployment supabase-supabase-realtime -n leapfrogai -o yaml | istioctl kube-inject -f - | kubectl apply -f -
+          - cmd: kubectl get deployment supabase-supabase-auth -n leapfrogai -o yaml | istioctl kube-inject -f - | kubectl apply -f -
+          - cmd: kubectl get deployment supabase-supabase-storage -n leapfrogai -o yaml | istioctl kube-inject -f - | kubectl apply -f -
