--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -7,8 +7,8 @@ WORKDIR /leapfrogai
 # copy the api dependencies over
 # NOTE: We are copying to this filename because installing 'optional extras' from a wheel requires the absolute path to the wheel file (instead of a wildcard whl)
 COPY build/*.whl build/
-COPY build/leapfrogai_api*.whl leapfrogai_api-100.100.100-py3-none-any.whl
-RUN pip install leapfrogai_api-100.100.100-py3-none-any.whl --no-index --find-links=build/
+COPY build/leapfrogai_api*.whl .
+RUN pip install leapfrogai_api*.whl --no-index --find-links=build/
 
 FROM ghcr.io/defenseunicorns/leapfrogai/python:3.11-${ARCH}
 
