--- a/packages/vllm/Dockerfile
+++ b/packages/vllm/Dockerfile
@@ -32,8 +32,8 @@ ENV PATH="/home/leapfrogai/.venv/bin:$PATH"
 # # create virtual environment for light-weight portability and minimal libraries
 # # NOTE: We are copying to this filename because installing 'optional extras' from a wheel requires the absolute path to the wheel file (instead of a wildcard whl)
 COPY build/*.whl build/
-COPY build/lfai_vllm*.whl lfai_vllm-100.100.100-py3-none-any.whl
-RUN pip install lfai_vllm-100.100.100-py3-none-any.whl --no-index --find-links=build/
+COPY build/lfai_vllm*.whl .
+RUN pip install lfai_vllm*.whl --no-index --find-links=build/
 
 # download model
 ARG REPO_ID=TheBloke/Synthia-7B-v2.0-GPTQ
