--- a/uds-bundles/dev/cpu/uds-bundle.yaml
+++ b/uds-bundles/dev/cpu/uds-bundle.yaml
@@ -35,5 +35,8 @@ packages:
     path: ../../../packages/whisper/
     ref: dev
 
+  - name: supabase
+    path: ../../../packages/supabase/
+    ref: 0.1.3
 
 
