Explicitly define host

--- a/packages/supabase/supabase-kubernetes/charts/supabase/templates/uds-package.yaml
+++ b/packages/supabase/supabase-kubernetes/charts/supabase/templates/uds-package.yaml
@@ -9,7 +9,7 @@ spec:
         - service: supabase-studio
             podLabels:
                 app: supabase-studio
-            host: {{ .Values.package.host }}
+            host: supabase-studio
             gateway: tenant
             port: 3000
 
