Adds rest configs and public urls

--- a/packages/supabase/supabase-kubernetes/charts/supabase/templates/uds-package.yaml
+++ b/packages/supabase/supabase-kubernetes/charts/supabase/templates/uds-package.yaml
@@ -12,6 +12,13 @@ spec:
         host: supabase-studio
         gateway: tenant
         port: 3000
+      - service: supabase-supabase-rest
+        podLabels:
+          app.kubernetes.io/instance: supabase
+        host: supabase-rest
+        gateway: tenant
+        port: 3000
+
 
     allow:
       - direction: Ingress
