--- a/packages/supabase/supabase-kubernetes/charts/supabase/values.example.yaml
+++ b/packages/supabase/supabase-kubernetes/charts/supabase/values.example.yaml
@@ -23,7 +23,7 @@ studio:
     pullPolicy: IfNotPresent
     tag: 20230127-6bfd87b
   environment:
-    SUPABASE_URL: http://supabase-studio.uds.dev
+    SUPABASE_URL: http://supabase-rest.uds.dev.uds.dev
     SUPABASE_REST_URL: http://supabase-rest.uds.dev/rest/v1/
     STUDIO_PG_META_URL: http://demo-supabase-kong.leapfrogai.svc.cluster.local:8000/pg
     SUPABASE_PUBLIC_URL: http://supabase-studio.uds.dev/
