Adds kong to public facing urls

--- a/packages/supabase/supabase-kubernetes/charts/supabase/templates/uds-package.yaml
+++ b/packages/supabase/supabase-kubernetes/charts/supabase/templates/uds-package.yaml
@@ -18,6 +18,12 @@ spec:
         host: supabase-rest
         gateway: tenant
         port: 3000
+      - service: supabase-supabase-kong
+        podLabels:
+          app.kubernetes.io/name: supabase-kong
+        host: supabase-kong
+        gateway: tenant
+        port: 8000
 
     allow:
       - direction: Ingress
