--- a/packages/supabase/supabase-kubernetes/charts/supabase/values.example.yaml
+++ b/packages/supabase/supabase-kubernetes/charts/supabase/values.example.yaml
@@ -23,10 +23,10 @@ studio:
     pullPolicy: IfNotPresent
     tag: 20230127-6bfd87b
   environment:
-    SUPABASE_URL: http://supabase-kong.uds.dev.uds.dev
-    SUPABASE_REST_URL: http://supabase-rest.uds.dev/rest/v1/
+    SUPABASE_URL: https://supabase-kong.uds.dev.uds.dev
+    SUPABASE_REST_URL: https://supabase-rest.uds.dev/rest/v1/
     STUDIO_PG_META_URL: http://supabase-supabase-kong.leapfrogai.svc.cluster.local:8000/pg
-    SUPABASE_PUBLIC_URL: http://supabase-studio.uds.dev/
+    SUPABASE_PUBLIC_URL: https://supabase-kong.uds.dev/
   ingress:
     enabled: true
     className: "nginx"
