--- a/packages/ui/chart/templates/ui/deployment.yaml
+++ b/packages/ui/chart/templates/ui/deployment.yaml
@@ -34,10 +34,13 @@ spec:
             - name: PUBLIC_SUPABASE_URL
               value: '###ZARF_VAR_SUPABASE_URL###'
             - name: PUBLIC_SUPABASE_ANON_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: demo-supabase-jwt
-                  key: anonKey
+              value: '###ZARF_VAR_SUPABASE_ANON_KEY###'
+{{/*              Use this instead once we have Supabase hosted*/}}
+{{/*            - name: PUBLIC_SUPABASE_ANON_KEY*/}}
+{{/*              valueFrom:*/}}
+{{/*                secretKeyRef:*/}}
+{{/*                  name: demo-supabase-jwt*/}}
+{{/*                  key: anonKey*/}}
             - name: PUBLIC_DISABLE_KEYCLOAK
               value: '###ZARF_VAR_DISABLE_KEYCLOAK###'
           resources:
