add repeater model to e2e-shim and remove from e2e workflow

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -26,6 +26,9 @@ on:
       # Ignore non e2e tests
       - "!tests/pytest/**"
 
+      # Ignore changes to the repeater model
+      - "!packages/repeater/*"
+
 
 concurrency:
   group: e2e-${{ github.ref }}
