--- a/.github/workflows/e2e-shim.yaml
+++ b/.github/workflows/e2e-shim.yaml
@@ -22,6 +22,9 @@ on:
       # Catch pytests
       - "tests/pytest/**"
 
+      # Catch changes to the repeater model
+      - "packages/repeater/**"
+
 
 permissions:
   contents: read
