add repeater model to e2e-shim and remove from e2e workflow

--- a/.github/workflows/e2e-shim.yaml
+++ b/.github/workflows/e2e-shim.yaml
@@ -27,6 +27,9 @@ on:
       - "src/leapfrogai_ui/**"
       - "packages/ui/**"
 
+      # Catch changes to the repeater model
+      - "packages/repeater/**"
+
 
 permissions:
   contents: read
