--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -29,3 +29,10 @@ components:
       - docker.io/bitnami/supabase-storage:0.48.4-debian-12-r0
       - docker.io/bitnami/supabase-studio:0.24.3-debian-12-r0
       - docker.io/bitnami/kong:3.6.1-debian-12-r13
+    actions:
+      onDeploy:
+          before:
+          - cmd: "kubectl label namespace leapfrogai istio-injection=disabled"
+
+          after:
+          - cmd: "kubectl label namespace leapfrogai istio-injection=enabled"
