--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -32,7 +32,7 @@ components:
     actions:
       onDeploy:
           before:
-          - cmd: "kubectl label namespace leapfrogai istio-injection=disabled"
+          - cmd: "kubectl label namespace leapfrogai istio-injection=disabled --overwrite"
 
           after:
-          - cmd: "kubectl label namespace leapfrogai istio-injection=enabled"
+          - cmd: "kubectl label namespace leapfrogai istio-injection=enabled --overwrite"
