add missing wildcard

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -32,7 +32,7 @@ on:
       - "!packages/ui/**"
 
       # Ignore changes to the repeater model
-      - "!packages/repeater/*"
+      - "!packages/repeater/**"
 
 
 concurrency:
