sets kong postgres default secret

--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -3259,7 +3259,7 @@ postgresql:
   ##
   auth:
     postgresPassword: ""
-    existingSecret: ""
+    existingSecret: "supabase-postgresql"
   ## @param postgresql.architecture PostgreSQL architecture (`standalone` or `replication`)
   ##
   architecture: standalone
