--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -29,6 +29,11 @@ components:
       - docker.io/bitnami/supabase-storage:0.48.4-debian-12-r0
       - docker.io/bitnami/supabase-studio:0.24.3-debian-12-r0
       - docker.io/bitnami/kong:3.6.1-debian-12-r13
+    manifests:
+      - name: uds-manifests
+        namespace: leapfrogai
+        files:
+          - "supabase-kubernetes/charts/supabase/templates/uds-package.yaml"
     actions:
       onDeploy:
           before:
