choer: refactor project structure to handle multiple pyprojects in monorepo (#361)
* break out pyproject into each package

* minor fixes: package build dests, docs, remove unused deploy values

* minor config and docs changes

* move sdk out of leapfrogai_api

* fully separate api and sdk

* replace components packages reference to sdk

* Makefile and README clarifications

* update e2e workflow

* add whisper dev dependencies

* update make clean target to remove src and package builds

* Update pyproject descriptions and documentation

* remove sdk package versions from pyprojects

* use pinned dev dependencies in whisper build

* simplify docker wheel builds

---------

Co-authored-by: Jon Perry <yrrepnoj@gmail.com>

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -24,7 +24,7 @@ jobs:
         run: docker run -p 50051:50051 -d --name=repeater ghcr.io/defenseunicorns/leapfrogai/repeater:0.3.3
 
       - name: Install Python Deps
-        run: pip install ".[dev]"
+        run: pip install "." "src/leapfrogai_api" "src/leapfrogai_sdk"
 
       - name: Run Pytest
         run: python -m pytest tests/pytest -v
