--- a/packages/repeater/zarf.yaml
+++ b/packages/repeater/zarf.yaml
@@ -1,21 +1,24 @@
 kind: ZarfPackageConfig
 metadata:
   name: repeater
-  version: 0.6.1
+  version: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
   description: >
     repeater
 
 constants:
   - name: IMAGE_VERSION
     value: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
-  - name: NAME
-    value: "###ZARF_PKG_TMPL_NAME###"
-  - name: IMAGE_REPOSITORY
-    value: "###ZARF_PKG_TMPL_IMAGE_REPOSITORY###"
 
 components:
-  - name: import-model
+  - name: repeater
     required: true
-    import:
-      name: model
-      url: oci://ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-model:0.4.0-skeleton
+    charts:
+      - name: repeater
+        namespace: leapfrogai
+        localPath: chart
+        releaseName: repeater
+        version: 0.6.1
+        valuesFiles:
+          - "repeater-values.yaml"
+    images:
+      - ghcr.io/defenseunicorns/leapfrogai/repeater:###ZARF_PKG_TMPL_IMAGE_VERSION###
