--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -11,8 +11,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"test:integration": "supabase db reset &&  playwright test",
-		"test:integration:ui": "supabase db reset &&  playwright test --ui",
+		"test:integration": "playwright test",
+		"test:integration:ui": "playwright test --ui",
 		"test:unit": "vitest run",
 		"test:unit:watch": "vitest",
 		"prepare": "husky",
