--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -60,7 +60,8 @@ fullnameOverride: ""
 namespaceOverride: ""
 ## @param commonLabels Labels to add to all deployed objects
 ##
-commonLabels: {}
+commonLabels:
+  proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
 ## @param commonAnnotations Annotations to add to all deployed objects
 ##
 commonAnnotations: {}
