--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -17,11 +17,6 @@ components:
         version: 4.0.1
         valuesFiles:
           - "bitnami-values.yaml"
-    manifests:
-      - name: uds-manifests
-        namespace: leapfrogai
-        files:
-          - "supabase-kubernetes/charts/supabase/templates/uds-package.yaml"
     images:
       - docker.io/bitnami/gotrue:2.149.0-debian-12-r0
       - docker.io/bitnami/jwt-cli:6.0.0-debian-12-r19
@@ -34,3 +29,10 @@ components:
       - docker.io/bitnami/supabase-storage:0.48.4-debian-12-r0
       - docker.io/bitnami/supabase-studio:0.24.3-debian-12-r0
       - docker.io/bitnami/kong:3.6.1-debian-12-r13
+  - name: supabase-uds-package
+    required: true
+    manifests:
+      - name: uds-manifests
+        namespace: leapfrogai
+        files:
+          - "supabase-kubernetes/charts/supabase/templates/uds-package.yaml"
