--- a/packages/ui/zarf.yaml
+++ b/packages/ui/zarf.yaml
@@ -29,7 +29,7 @@ variables:
     sensitive: true
   - name: MODEL
     description: The default LLM model to use for chat and summarization
-    default: vllm
+    default: llama-cpp-python
     prompt: true
     sensitive: false
   - name: SYSTEM_PROMPT
