Attempts to escape problematic label

--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -590,7 +590,7 @@ auth:
   ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
   ##
   podLabels:
-    proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
+    proxy.istio.io/config: {{ '{ "holdApplicationUntilProxyStarts": true }' }}
   ## @param auth.podAnnotations Annotations for Supabase auth pods
   ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
   ##
