--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -75,7 +75,7 @@ extraDeploy: []
 diagnosticMode:
   ## @param diagnosticMode.enabled Enable diagnostic mode (all probes will be disabled and the command will be overridden)
   ##
-  enabled: false
+  enabled: true
   ## @param diagnosticMode.command Command to override all containers in the deployment
   ##
   command:
