Apply istio configs only to studio

--- a/packages/supabase/supabase-kubernetes/charts/supabase/templates/uds-package.yaml
+++ b/packages/supabase/supabase-kubernetes/charts/supabase/templates/uds-package.yaml
@@ -19,5 +19,6 @@ spec:
         remoteGenerated: Anywhere
       - direction: Egress
         podLabels:
-          app.kubernetes.io/instance: supabase
+          app.kubernetes.io/name: supabase
+          app.kubernetes.io/component: studio
         remoteGenerated: Anywhere
